# embedded-playground

./: Cargo.toml  Makefile  Readme.md  build.rs
arduino/: playground.ino
blinky/: Cargo.toml  README.md
blinky/src/: descriptor.rs  dotstar.rs  main.rs
bootloader/: dapboot.elf
cross/: README.md
cross/src/: debounce.rs  hold.rs  lib.rs  rotary.rs
debug-config/: ATSAMD21G18A.svd  openocd.cfg  openocd.gdb
device/: Cargo.toml
device/src/: descriptor.rs  main.rs
rust/: Cargo.toml  Makefile  memory.x  rust-toolchain.toml
rust/.cargo/: config.toml
rust/avr-specs/: avr-atmega32u4.json
rust/src/: debounce.rs  main.rs
spinny/: Cargo.toml  README.md  build.rs  memory.x
spinny/.cargo/: config.toml
spinny/hardware/: .gitignore  Makefile  Spinny.kicad_pcb  Spinny.kicad_prl  Spinny.kicad_pro  Spinny.kicad_sch  Spinny.kicad_sch-bak  _autosave-Spinny.kicad_pcb  fp-info-cache  fp-lib-table  sym-lib-table
spinny/hardware/libs/: DigiKey.kicad_sym
spinny/hardware/libs/DigiKey.pretty/: SW_TS02-66-43-BK-100-LCR-D.kicad_mod  XDCR_PEC11R-4215F-S0024.kicad_mod
spinny/hardware/libs/JLCPCB.pretty/: SMD-SW-4_5.1x5.1x1.5.kicad_mod
spinny/hardware/production/: Spinny-B_Cu.gbl  Spinny-B_Mask.gbs  Spinny-B_Paste.gbp  Spinny-B_Silkscreen.gbo  Spinny-Edge_Cuts.gm1  Spinny-F_Cu.gtl  Spinny-F_Mask.gts  Spinny-F_Paste.gtp  Spinny-F_Silkscreen.gto  Spinny-NPTH-drl_map.gbr  Spinny-NPTH.drl  Spinny-PTH-drl_map.gbr  Spinny-PTH.drl  pos.csv
spinny/hardware/production/enclosure/: back-case.stl  button.stl  front-case.stl  knob.stl
spinny/hardware/production/gerber/: Spinny-CmtUser.gbr  Spinny-CuBottom.gbl  Spinny-CuTop.gtl  Spinny-EdgeCuts.gm1  Spinny-MaskBottom.gbs  Spinny-MaskTop.gts  Spinny-PasteBottom.gbp  Spinny-PasteTop.gtp  Spinny-SilkBottom.gbo  Spinny-SilkTop.gto  Spinny.drl  Spinny.gbrjob  drill_report.rpt
spinny/hardware/production/pcb/: bom.csv  pos.csv
spinny/hardware/production/pcb/gerber/: Spinny-CmtUser.gbr  Spinny-CuBottom.gbl  Spinny-CuTop.gtl  Spinny-EdgeCuts.gm1  Spinny-MaskBottom.gbs  Spinny-MaskTop.gts  Spinny-PasteBottom.gbp  Spinny-PasteTop.gtp  Spinny-SilkBottom.gbo  Spinny-SilkTop.gto  Spinny.drl  Spinny.gbrjob  drill_report.rpt
spinny/software/: Cargo.toml  README.md  memory.x
spinny/software/src/: bootloader.rs  descriptor.rs  device.rs  inputs.rs  main.rs  usb.rs
spinny/src/: main.rs
src/: dotstar.rs  hold.rs  main.rs  rotary.rs
