[package]
name = "rust-playground"
version = "0.1.0"
authors = ["Viktor Charypar <charypar@gmail.com>"]
edition = "2018"

[[bin]]
name = "rust-playground"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
embedded-hal = "0.2.3"
trinket_m0 = { version = "0.11.0", features = ["unproven"] }
cortex-m-rt = "0.7"
apa102-spi = "0.3"
bitbang-hal = "0.3.2"
smart-leds = "0.3"
smart-leds-trait = "0.2"

