[package]
name = "rust-playground"
version = "0.1.0"
authors = ["Viktor Charypar <charypar@gmail.com>"]
edition = "2018"

[[bin]]
name = "rust-playground"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
atsamd-hal = { version = "0.14.0", features = ["samd21e", "samd21", "usb", "unproven"] }
cortex-m-rt = "0.7"
smart-leds = "0.3"
smart-leds-trait = "0.2"
apa102-spi = "0.3"
usb-device = "0.2"
usbd-serial = "0.1"
