[package]
name = "spinny"
version = "0.1.0"
authors = ["Viktor Charypar <charypar@gmail.com>"]
edition = "2018"

[[bin]]
name = "spinny"
test = false
bench = false

[dependencies]
embedded-hal = "0.2.6"
panic-halt = "0.2.0"
cortex-m-rtic = { version = "1.0.0" }
systick-monotonic = "1.0.0"
usb-device = "0.2"
usbd-serial = "0.1"
usbd-hid = "0.5"
stackfmt = "0.1"
cross = { path = "../../cross" }

[dependencies.stm32f1xx-hal]
version = "^0.9"
features = ["rt", "stm32f103", "medium", "rtic"]
